logs/dbf_build.log
Removing old build directory
Removing old work directory
BUILD START: dbf-0.96.003-py27_0
Fetching package metadata: ......
Solving package specifications: .+ /home/ubuntu/miniconda/envs/_build/bin/python setup.py install
/home/ubuntu/miniconda/envs/_build/lib/python2.7/distutils/dist.py:267: UserWarning: Unknown distribution option: 'install_requires'
  warnings.warn(msg)
running install
running build
running build_py
creating build
creating build/lib
creating build/lib/dbf
copying dbf/ver_32.py -> build/lib/dbf
copying dbf/tests.py -> build/lib/dbf
copying dbf/__init__.py -> build/lib/dbf
copying dbf/ver_2.py -> build/lib/dbf
copying dbf/ver_33.py -> build/lib/dbf
running install_lib
creating /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/dbf
copying build/lib/dbf/ver_32.py -> /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/dbf
copying build/lib/dbf/tests.py -> /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/dbf
copying build/lib/dbf/__init__.py -> /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/dbf
copying build/lib/dbf/ver_2.py -> /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/dbf
copying build/lib/dbf/ver_33.py -> /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/dbf
byte-compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/dbf/ver_32.py to ver_32.pyc
byte-compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/dbf/tests.py to tests.pyc
byte-compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/dbf/__init__.py to __init__.pyc
byte-compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/dbf/ver_2.py to ver_2.pyc
byte-compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/dbf/ver_33.py to ver_33.pyc
  File "/home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/dbf/ver_33.py", line 2577
    raise DbfError("unable to write updates to disk, original data restored: %r" % (exc,)) from None
                                                                                              ^
SyntaxError: invalid syntax

running install_egg_info
Writing /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/dbf-0.96.003-py2.7.egg-info
Compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/dbf/ver_33.py ...
  File "/home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/dbf/ver_33.py", line 2577
    raise DbfError("unable to write updates to disk, original data restored: %r" % (exc,)) from None
                                                                                              ^
SyntaxError: invalid syntax


The following NEW packages will be INSTALLED:

    enum34:     1.0.4-py27_0 
    openssl:    1.0.1k-1     
    pip:        7.0.3-py27_0 
    python:     2.7.10-0     
    readline:   6.2-2        
    setuptools: 17.1.1-py27_0
    sqlite:     3.8.4.1-1    
    system:     5.8-2        
    tk:         8.5.18-0     
    zlib:       1.2.8-0      

Linking packages ...
[                    ]|                                                  |   0%[openssl             ]|                                                  |   0%[readline            ]|#####                                             |  10%[sqlite              ]|##########                                        |  20%[system              ]|###############                                   |  30%[tk                  ]|####################                              |  40%[zlib                ]|#########################                         |  50%[enum34              ]|##############################                    |  60%[python              ]|###################################               |  70%[setuptools          ]|########################################          |  80%[pip                 ]|#############################################     |  90%[      COMPLETE      ]|##################################################| 100%
Removing old work directory
Source cache directory is: /home/ubuntu/miniconda/conda-bld/src_cache
Found source in cache: dbf-0.96.003.tar.gz
Extracting download
Package: dbf-0.96.003-py27_0
source tree in: /home/ubuntu/miniconda/conda-bld/work/dbf-0.96.003
compiling .pyc files...
Command failed: /home/ubuntu/miniconda/envs/_build/bin/python -Wi /home/ubuntu/miniconda/envs/_build/lib/python2.7/compileall.py -q -x port_v3 /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages
